--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "nanoid": "^3.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dom-confetti": "^0.2.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
